# cargo-lab

./: .earthlyignore  .gitignore  CHANGELOG.md  Cargo.toml  Earthfile  NOTES.md  NOTICES.md  README.md  TODO.md  deny.toml  rust-toolchain.toml  rustfmt.toml
dev_notes/: README.md  TODO.md  autocomplete_hell_support_matrix.md  clap_and_autocomplete.md  config_management.md  invoking_cargo_plugins.md
src/: cargo_cli_helpers.rs  cargo_script.rs  cli.rs  cli_completions.rs  cli_parsers.rs  commands.rs  config.rs  data.rs  errors.rs  global_ctx.rs  main.rs  manifest_data.rs  manifest_editor.rs  ops.rs  passthrough_arg_macro.rs  project_checker.rs  random_names.rs  script_name_newtype.rs  templates.rs  util.rs
src/cli/: args.rs  autocomplete_cargo_shim.bash  autocomplete_cargo_shim.fish  autocomplete_cargo_shim.zsh  autocomplete_helper.fish  cargo_cli_helpers.rs  cargo_subcmd_shim.rs  completion_script.rs  completions.rs  derive_macros.rs  derive_traits.rs  entrypoint.rs  feature_parsers.rs  invocations.rs  mod.rs  parser.rs  parsers.rs  passthrough_arg_macro.rs  style.rs
src/ops/: _common.rs  add_deps_to_script.rs  check_lab.rs  check_playground.rs  init_lab.rs  init_playground.rs  launch_editor.rs  list_and_display_scripts.rs  mod.rs  new_script.rs  rename_script.rs  run_script.rs
src/vendor_cargo/: embedded.rs  frontmatter.rs  mod.rs  style.rs
templates/: basic.rs.template  clap.rs.template  clap_subcmd.rs.template
tests/: helpers.rs  test_autocomplete.rs  test_autocomplete_invocation.rs  test_lifecycle.rs
tests/common/: constants.rs  helpers.rs  mod.rs
tests/shell/: README.md  show-completions.bash  test_shell_completion_integration.sh
