[package]
name = "cargo-lab"
version = "0.0.0-unset"
edition = "2024"

[[bin]]
name = "cargo-playground"
path = "src/main.rs"

[features]
xtask = []  # for use as an "xtask" in a subfolder of the project root
experimental_cargo_script_rfc3502 = ["dep:winnow"]

# (most?) aggressive size optimizations
# In linux/mac tests, this reduces size by 50% from normal release
# from https://github.com/BurntSushi/ripgrep/blob/4519153/Cargo.toml#L77-L87
[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

# ───── DEPS ───────────────────────────────────────────────────── #
[dependencies]
all-the-errors = "0.1.1" # my crate

# Trust: highest (all deps here are used by cargo itself too)
anstyle = "1.0.14"
annotate-snippets = "0.12.13"
clap = { version = "4.6.0", features = ["derive", "wrap_help", "color", "string"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
color-print = "0.3.7"
rand = "0.10.1"
toml_edit = { version = "0.25.11", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
winnow = { version = "1.0.1", optional = true }

# Trust: very high (audit by mozilla, owned by core devs)
camino = "1.2.2"

# Trust: very high (by @mitsuhiko, many audits, no transitive deps)
similar = { version = "3.1.0", features = ["inline"] } # provides diffs

# Trust: very high (by @mitsuhiko, only dep is serde)
minijinja = "2.20.0"

# Trust: high (audit by mozilla, widely used)
macro_rules_attribute = "0.2.2"


# ───── TEST DEPS ──────────────────────────────────────────────── #
[dev-dependencies]
# Trust: very high (audit by mozilla, owned by @epage)
assert_cmd = "2.2.1"

# Trust: very high (blessed.rs)
tempfile = "3.27.0"
